@@ -25,6 +25,6 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2017032800;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2017032801;        // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires  = 2016051900;        // Requires this Moodle version.
 $plugin->component = 'block_my_courses'; // Full name of the plugin (used for diagnostics).
